corpus/extern/testdata/expected/3-e.txtar
-- stdout --
-- stderr --
error[SEMANTIC_ERROR]: incompatible type: expected int, got string
  --> 3-e.bal:19:13
   |
19 |     int _ = foo(); // @error
   |             ^^^^^
